# AWS-SQS-ImageResize-Demo

./: CMakeLists.txt  README.md  main.cpp
include/: resize.hpp
